# rocwmma-rocm7.13-gfx1103-aocc5.14

./: .gitignore  .readthedocs.yaml  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  install.sh  make.sh  rtest.xml  va-make.sh
samples/community/: CMakeLists.txt  README.md  simple_fusion_gemm.cpp  simple_gemm_act.cpp  simple_gemm_swiglu.cpp  template.cpp
test/: CMakeLists.txt  common.hpp  helper_macros.hpp  hip_device.cpp  hip_device.hpp  hip_resource.hpp  hip_resource_impl.hpp  kernel_generator.hpp  performance.hpp  reference.hpp  reference_impl.hpp  rocblas_reference.hpp  rocwmma_gtest_main.cpp  rocwmma_options.hpp  rocwmma_ostream.hpp  singleton.hpp  test_config.hpp
test/device/: common.hpp
test/dlrm/: common.hpp  dlrm_kernel_base.cpp  dlrm_kernel_base.hpp  dlrm_kernel_base_impl.hpp  dlrm_resource.hpp  dlrm_resource_impl.hpp  lds_mapping_util.hpp
test/dlrm/detail/: dlrm_dot.hpp  dlrm_dot_lds.hpp
test/dlrm/device/: common.hpp  dlrm_dot_bwd.hpp  dlrm_dot_bwd_lds.hpp  dlrm_dot_fwd.hpp  dlrm_dot_fwd_lds.hpp
test/dlrm/test/: dlrm_dot_lds_test.cpp  dlrm_dot_test.cpp  dlrm_dot_test.hpp  dlrm_test_params.hpp
test/dlrm/test/emulation/: regressiontest-dlrm_dot_lds_test.cpp  regressiontest-dlrm_dot_test.cpp  smoketest-dlrm_dot_lds_test.cpp  smoketest-dlrm_dot_test.cpp
test/gemm/: CMakeLists.txt  gemm_common_test_params.hpp  gemm_config.hpp  gemm_driver.hpp  gemm_driver_impl.hpp  gemm_global_mapping.hpp  gemm_global_mapping_impl.hpp  gemm_kernel_base.cpp  gemm_kernel_base.hpp  gemm_kernel_base_dispatch_impl.hpp  gemm_kernel_base_impl.hpp  gemm_local_mapping.hpp  gemm_local_mapping_impl.hpp  gemm_predicates_base.hpp  gemm_resource.cpp  gemm_resource.hpp  gemm_resource_impl.hpp  gemm_test_macros.hpp  gemm_test_traits.hpp
test/gemm/gemm_PGR0_LB0_MP0_MB_NC/: CMakeLists.txt
test/gemm/gemm_PGR0_LB0_MP0_MB_NC/detail/: kernel_generator_impl.hpp  kernel_impl.hpp
test/gemm/gemm_PGR0_LB0_MP0_MB_NC/device/: kernel_device_func.hpp  kernel_predicates.hpp
test/gemm/gemm_PGR0_LB0_MP0_MB_NC/test/: 16x16_nn_1x1.cpp  16x16_nn_1x2.cpp  16x16_nn_1x4.cpp  16x16_nn_1x8.cpp  16x16_nn_2x1.cpp  16x16_nn_2x2.cpp  16x16_nn_2x4.cpp  16x16_nn_2x8.cpp  16x16_nn_4x1.cpp  16x16_nn_4x2.cpp  16x16_nn_4x4.cpp  16x16_nn_4x8.cpp  16x16_nn_8x1.cpp  16x16_nn_8x2.cpp  16x16_nn_8x4.cpp  16x16_nn_8x8.cpp  16x16_nt_1x1.cpp  16x16_nt_1x2.cpp  16x16_nt_1x4.cpp  16x16_nt_1x8.cpp  16x16_nt_2x1.cpp  16x16_nt_2x2.cpp  16x16_nt_2x4.cpp  16x16_nt_2x8.cpp  16x16_nt_4x1.cpp  16x16_nt_4x2.cpp  16x16_nt_4x4.cpp  16x16_nt_4x8.cpp  16x16_nt_8x1.cpp  16x16_nt_8x2.cpp  16x16_nt_8x4.cpp  16x16_nt_8x8.cpp  16x16_tn_1x1.cpp  16x16_tn_1x2.cpp  16x16_tn_1x4.cpp  16x16_tn_1x8.cpp  16x16_tn_2x1.cpp  16x16_tn_2x2.cpp  16x16_tn_2x4.cpp  16x16_tn_2x8.cpp  (+74 more)
test/gemm/gemm_PGR0_LB0_MP0_SB_NC/: CMakeLists.txt
test/gemm/gemm_PGR0_LB0_MP0_SB_NC/detail/: kernel_generator_impl.hpp  kernel_impl.hpp
test/gemm/gemm_PGR0_LB0_MP0_SB_NC/device/: kernel_device_func.hpp  kernel_predicates.hpp
test/gemm/gemm_PGR0_LB0_MP0_SB_NC/test/: 16x16_nn.cpp  16x16_nt.cpp  16x16_tn.cpp  16x16_tt.cpp  32x32_nn.cpp  32x32_nt.cpp  32x32_tn.cpp  32x32_tt.cpp  ad_hoc_test.cpp  common_test_params.hpp  test_includes.hpp
test/gemm/gemm_PGR1_LB2_MP0_MB_CP/: CMakeLists.txt
test/gemm/gemm_PGR1_LB2_MP0_MB_CP/detail/: kernel_generator_impl.hpp  kernel_impl.hpp
test/gemm/gemm_PGR1_LB2_MP0_MB_CP/device/: kernel_device_func.hpp  kernel_predicates.hpp
test/gemm/gemm_PGR1_LB2_MP0_MB_CP/test/: ad_hoc_test.cpp  common_test_params.hpp  test_includes.hpp
test/regression/: CMakeLists.txt  hiprtc_basic_functionality.cpp  hiprtc_rocwmma.cpp  issue_example.cpp  reg_common.hpp  rocm-libraries_issues_4398.cpp
test/unit/: CMakeLists.txt  unit_kernel_base.cpp  unit_kernel_base.hpp  unit_kernel_base_impl.hpp  unit_resource.hpp  unit_resource_impl.hpp  unit_test.hpp  unit_test_macros.hpp  unit_test_params.hpp  unit_test_traits.hpp
test/unit/contamination_test/: CMakeLists.txt
test/unit/contamination_test/detail/: load_contamination.hpp  store_contamination.hpp
test/unit/contamination_test/device/: load_contamination.hpp  store_contamination.hpp
test/unit/contamination_test/test/: contamination_test_params.hpp  load_contamination_a_128_bf16.cpp  load_contamination_a_128_bf8.cpp  load_contamination_a_128_bf8_fnuz.cpp  load_contamination_a_128_f16.cpp  load_contamination_a_128_f32.cpp  load_contamination_a_128_f8.cpp  load_contamination_a_128_f8_fnuz.cpp  load_contamination_a_128_hf16.cpp  load_contamination_a_128_i32.cpp  load_contamination_a_128_i8.cpp  load_contamination_a_128_u32.cpp  load_contamination_a_128_u8.cpp  load_contamination_a_128_xf32.cpp  load_contamination_a_16.cpp  load_contamination_a_256_bf16.cpp  load_contamination_a_256_bf8.cpp  load_contamination_a_256_bf8_fnuz.cpp  load_contamination_a_256_f16.cpp  load_contamination_a_256_f32.cpp  load_contamination_a_256_f8.cpp  load_contamination_a_256_f8_fnuz.cpp  load_contamination_a_256_hf16.cpp  load_contamination_a_256_i32.cpp  load_contamination_a_256_i8.cpp  load_contamination_a_256_u32.cpp  load_contamination_a_256_u8.cpp  load_contamination_a_256_xf32.cpp  load_contamination_a_32_bf16.cpp  load_contamination_a_32_bf8.cpp  load_contamination_a_32_bf8_fnuz.cpp  load_contamination_a_32_f16.cpp  load_contamination_a_32_f32.cpp  load_contamination_a_32_f8.cpp  load_contamination_a_32_f8_fnuz.cpp  load_contamination_a_32_hf16.cpp  load_contamination_a_32_i32.cpp  load_contamination_a_32_i8.cpp  load_contamination_a_32_u32.cpp  load_contamination_a_32_u8.cpp  (+279 more)
test/unit/cross_lane_ops_test/detail/: cross_lane_ops.hpp
test/unit/fill_fragment_test/: CMakeLists.txt
test/unit/float_test/: CMakeLists.txt
test/unit/float_test/test/: float8.cpp  (+1 more)
test/unit/layout_test/: CMakeLists.txt
test/unit/layout_traits_test/: CMakeLists.txt
test/unit/load_store_matrix_coop_sync_test/: CMakeLists.txt
test/unit/load_store_matrix_sync_test/: CMakeLists.txt
test/unit/map_util_test/: CMakeLists.txt
test/unit/references/: register_bank.hpp
test/unit/vector_util_test/: CMakeLists.txt
(+972 files in other folders)
